# Circuit_Designer

./: .dvcignore  .gitignore  AGENTS.md  dvc.yaml  git_ship.sh  params.yaml  pyproject.toml  ship.sh
docs/: parallel_ray.md
requirements/: README.md  requirements.in
scripts/: benchmark_eval.py  bootstrap.sh  fidp_profile_dsl_expand.py  fidp_profile_vector_fitting.py
src/fidp/: __init__.py  data.py  env_check.py  errors.py  novelty_score.py
src/fidp/analysis/: __init__.py
src/fidp/circuits/: __init__.py  canonical.py  core.py  ir.py  ir_export.py  ops.py
src/fidp/dsl/: __init__.py  ast.py  compiler.py  demo.py  grammar.lark  parser.py
src/fidp/evaluators/: __init__.py  passivity.py  stack.py  types.py
src/fidp/experiments/: __init__.py  pipeline.py  smoke.py  tracking.py
src/fidp/metrics/: __init__.py  novelty.py
src/fidp/modeling/: __init__.py  fractional_fit.py  macromodel_io.py  passivity.py  vector_fit.py
src/fidp/parallel/: __init__.py  actor_pool.py  cache.py  executor.py  resources.py  runtime.py
src/fidp/search/: __init__.py  dataset.py  (+8 more)
tests/: TEST_INDEX.md  test_dsl_fuzz.py  test_dsl_parse_roundtrip.py  test_env_check.py  test_env_check_repro.py  test_evaluator_failure_modes.py  test_experiments_mlflow_logger.py  test_experiments_pipeline.py  test_experiments_smoke_cli.py  test_fractional_fit.py  test_fractional_order_estimation.py  test_graph_canonical_hash.py  test_macromodel_io.py  test_mna_golden_fixture.py  test_mna_impedance.py  test_mna_vs_spice_ngspice.py  test_mna_vs_spice_ngspice_dsl.py  test_mna_vs_spice_small.py  test_novelty_scoring.py  test_packaging_pyproject.py  test_parallel_actor_pool.py  test_parallel_cache.py  test_parallel_executor.py  test_parallel_runtime.py  test_passivity.py  test_passivity_enforcement.py  test_prima_passivity.py  test_prima_reduction.py  test_recurrence_convergence.py  test_recurrence_solver.py  test_repro_dvc_config.py  test_search_active_learning.py  test_search_botorch.py  test_search_evolution.py  test_search_features.py  test_search_surrogate.py  test_search_training.py  test_spice_export_validity.py  test_spice_runner_contract.py  test_spice_scaffolding.py  (+4 more)
tests/data/: spice_output.csv
tests/fixtures/: rc_series_gold.json  vector_fit_recovery.json
(+26 files in other folders)
