[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fidp"
version = "0.0.0"
description = "Fractal-Order Impedance Discovery Platform"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "torch>=2.3,<3",
  "torchvision>=0.18,<1",
  "torchaudio>=2.3,<3",
  "botorch>=0.10,<0.13",
  "gpytorch>=1.11,<1.14",
  "packaging>=23,<25",
  "pytest>=7.4,<9",
]

[project.optional-dependencies]
dev = [
  "pip-tools>=7.5,<8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
