[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fidp"
version = "0.0.0"
description = "Fractal-Order Impedance Discovery Platform"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "torch>=2.3,<3",
  "torchvision>=0.18,<1",
  "torchaudio>=2.3,<3",
  "botorch>=0.10,<0.13",
  "gpytorch>=1.11,<1.14",
  "packaging>=23,<25",
  "pytest>=7.4,<9",
  "lark>=1.1,<2",
  "networkx>=3.2,<4",
  "hypothesis>=6.100,<7",
  "pyarrow>=12,<17",
  "mlflow>=2.12,<3",
  "dvc>=3.50,<4",
  "ray>=2.9,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pip-tools>=7.5,<8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fidp.dsl" = ["grammar.lark"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "spice: tests requiring a real SPICE executable",
]
